# OCC-Configurator

./: .gitignore  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  STATE.md  (+2 more)
Source Code/flash-reset/: CMakeLists.txt  README.md  flash.c  nuke.c
Source Code/flash-reset/.github/workflows/: cmake.yml
Source Code/flash-reset/build-ble/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  flash_nuke.vcxproj  flash_nuke.vcxproj.filters  universal_flash_nuke.slnx
Source Code/flash-reset/build-ble/pico-sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pico_sdk.slnx
Source Code/flash-reset/build-ble/pico-sdk/docs/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_sync/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_time/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/common/pico_util/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2040/boot_stage2/: bs2_default.vcxproj  bs2_default.vcxproj.filters  bs2_default_bin.vcxproj  bs2_default_bin.vcxproj.filters  bs2_default_library.vcxproj  bs2_default_library.vcxproj.filters  cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
Source Code/flash-reset/build-ble/pico-sdk/tools/: cmake_install.cmake
Source Code/flash-reset/build-ble/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Source Code/flash-reset/build-ninja/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake  flash_nuke.dis  flash_nuke.elf  flash_nuke.elf.map  flash_nuke.hex  flash_nuke.uf2
Source Code/flash-reset/build-ninja/pico-sdk/: cmake_install.cmake
Source Code/flash-reset/build-ninja/pico-sdk/docs/: cmake_install.cmake
Source Code/flash-reset/build-ninja/pico-sdk/src/: cmake_install.cmake
Source Code/flash-reset/build-ninja/pico-sdk/tools/: cmake_install.cmake
Source Code/pico-arcadestick/: CMakeLists.txt  build.bat
Source Code/pico-arcadestick/src/: arcadestick_config.c  arcadestick_config.h  arcadestick_config_serial.c  arcadestick_config_serial.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_driver.h
Source Code/pico-dongle-4channel/: CMakeLists.txt
Source Code/pico-dongle-4channel/src/: apa102_leds.c  apa102_leds.h  btstack_config.h  dongle_bindings.c  dongle_bindings.h  dongle_bt.c  dongle_bt.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_driver.c  xinput_driver.h
Source Code/pico-guitar-controller-wired/: CMakeLists.txt
Source Code/pico-guitar-controller-wired/src/: apa102_leds.c  apa102_leds.h  config_serial.c  config_serial.h  guitar_config.c  guitar_config.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_driver.c  xinput_driver.h
Source Code/pico-guitar-controller-wireless/: CMakeLists.txt
Source Code/pico-guitar-controller-wireless/src/: apa102_leds.c  apa102_leds.h  ble_identity_storage.c  ble_identity_storage.h  bt_hid_gamepad.c  bt_hid_gamepad.h  btstack_config.h  config_serial.c  controller_binding_storage.c  controller_binding_storage.h  controller_bt.c  controller_bt.h  guitar_config.c  guitar_config.h  lis3dh.c  main.c  occ_controller.gatt  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_driver.c
Source Code/pico-keyboard-macro/: CMakeLists.txt  build.bat
Source Code/pico-keyboard-macro/src/: macro_config.c  macro_config.h  macro_config_serial.c  macro_config_serial.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Source Code/pico-pedal/: CMakeLists.txt  build.bat  pedaltroubleshooting.md
Source Code/pico-pedal/lib/Pico-PIO-USB/.github/workflows/: build.yml
Source Code/pico-pedal/lib/Pico-PIO-USB/src/: pio_usb.c  pio_usb_host.c
Source Code/pico-pedal/src/: apa102_leds.c  apa102_leds.h  hcd_pio_usb_debug.c  main.c  pedal_config.c  pedal_config.h  pedal_config_serial.c  pedal_config_serial.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_host.c  xinput_host.h
Source Code/pico-retro/: CMakeLists.txt  build.bat
Source Code/pico-retro/src/: main.c  retro_config.c  retro_config.h  retro_config_serial.c  retro_config_serial.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  xinput_driver.c
Source Code/z-OLDFW/guitar-controller-bt-only/: CMakeLists.txt
Source Code/z-OLDFW/guitar-controller-bt-only/src/: adxl345.h  bt_hid_gamepad.c  config_serial.c  guitar_config.h  lis3dh.h  main.c  tusb_config.h
(+370 files in other folders)
